[package]
name = "docker_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bollard = "0.11.0"
bytes = "1.1.0"
color-eyre = { version = "0.5.11", default-features = false }
futures = "0.3.17"
futures-util = "0.3.17"
hyper = "0.14.13"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = "0.6.8"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
